# aiproteomics

./: .bumpversion.cfg  .gitattributes  .gitignore  .mlc-config.json  .prospector.yml  .pylintrc  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Data inspection.ipynb  NOTICE  README.dev.md  README.md  analyze predictions.ipynb  analyze_predictions.ipynb  analyze_predictions.py  apply_tabtransformer.ipynb  demo.ipynb  index.html  mkdocs.yml  project_setup.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  sonar-project.properties  train.py  trainfrag.sh
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  documentation.yml  pypi.yml  sonarcloud.yml
aiproteomics/: __init__.py  tfrecords.py  wandbconfig.py
aiproteomics/comparison/: ComparisonPrositFrag.py
aiproteomics/core/: definitions.py  fragment.py  model.py  model_to_speclib.py  models.py  modeltypes.py  mz.py  sequence.py  spectrum.py  testmodel.py  utils.py
aiproteomics/datasets/: DataSetPrositFrag.py
aiproteomics/decode/: model_to_speclib.py
aiproteomics/demo/: demo.ipynb
aiproteomics/e2e/: README.md  annotate.py  constants.py  convert_to_msp.py  match.py  parse_tsv.py  sanitize.py  speclib_writers.py  speclibgen.py  tensorize.py  utils.py
aiproteomics/frag/datasets/: __init__.py
aiproteomics/frag/datasets/AIProteomicsProsit1Frag/: AIProteomicsProsit1Frag.py  AIProteomicsProsit1Frag_test.py  __init__.py
aiproteomics/frag/models/: .gitignore  __init__.py  early_fusion_transformer.py  prosit1_model.py  transformer_frag.py
aiproteomics/frag/models/prosit1/: sanitize.py
aiproteomics/modelgen/: __init__.py  keras_transformer.py  prosit1_gen.py  prosit1_model.py  save_model.py  test_prosit_to_onnx.py
aiproteomics/modelgen/prosit1/: __init__.py  constants.py  layers.py  losses.py  sanitize.py
aiproteomics/models/: custom_losses.py  dummy_models.py  msms_transformer.py  prosit1.py
aiproteomics/rt/datasets/: __init__.py
aiproteomics/rt/datasets/AIProteomicsHela1/: AIProteomicsHela1.py  AIProteomicsHela1_test.py  __init__.py  checksums.tsv
aiproteomics/rt/models/: __init__.py  transformer_rt.py
cli/: create.py
cmd/: .gitignore  create_spectral_library.py  datasets.ipynb  remove_U
data_exploration_notebooks/: analyze_predictions.ipynb  analyze_predictions.sh  predict.sh  train.py  trainfrag.sh
demo/: README.md  analyze predictions.ipynb  demo.ipynb  demo_aiproteomics_model.py  demo_e2e.ipynb  demo_spectral_angle_comparison.ipynb  peptides_to_predict.tsv  report_prosit_e2e.ipynb  test_aiproteomics_model.py  uniprot_e2e.ipynb  uniprot_human_100.tsv  weight_67_0.22422.hdf5
docs/: Makefile  conf.py  index.md  index.rst  make.bat
prosit_fragmentation/: CITATIONS.bib  README.md  TAGS.txt  checksums.tsv  prosit_fragmentation_dataset_builder.py  prosit_fragmentation_dataset_builder_test.py
prosit_fragmentation/dummy_data/: Untitled.ipynb  sample.hdf5  val_sample.hdf5
search/: search_index.json
tabtransformer_test/: apply_tabtransformer.ipynb  apply_tabtransformer.py  readme.md  train.py  train_transformer.sh
tests/: test_aiproteomicsmodel.py  test_hello_world.py  test_model_building.py  test_my_module.py  test_spectral_lib_generation.py
thang_tfrecords/: tfrecord_example.ipynb
tools/: README.md  definitions.py  psm2speclib.py  speclib2psm.py  utils.py
