[tool.poetry]
name = "aiproteomics"
version = "0.1.0"
description = ""
authors = ["Robin Richardson <r.richardson@esciencecenter.nl>", "Dani Bodor <d.bodor@esciencecenter.nl>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
tensorflow = "2.11.0"
tf2onnx = "^1.13.0"
pandas = "^1.5.3"
chardet = "^5.1.0"
pyteomics = "^4.5.6"
pydot = "^1.4.2"
graphviz = "^0.20.1"
lxml = "^4.9.2"
autopep8 = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
bump2version = "^1.0.1"
prospector = "^1.8.4"
pyroma = ">=2.4"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"

[project.optional-dependencies]
doc = [
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=8.2.7,<9.0.0",
    "mkdocstrings[python] >=0.18.1",
    "mdx-include >=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin >=0.1.7,<0.3.0",
    "jinja2 ==3.0.3",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
