[tool.poetry]
name = "aiproteomics"
version = "0.1.0"
description = ""
authors = ["Robin Richardson <r.richardson@esciencecenter.nl>", "Dani Bodor <d.bodor@esciencecenter.nl>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
tf2onnx = "^1.13.0"
pandas = "^1.5.3"
chardet = "^5.1.0"
pyteomics = "^4.5.6"
pydot = "^1.4.2"
graphviz = "^0.20.1"
lxml = "^4.9.2"
seaborn = "^0.12.2"

# Issue between poetry and tensorflow metadata since >=2.11
# This is a temporary workaround
# related to https://github.com/python-poetry/poetry/issues/8271
# Inspired from https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L148-L162
tensorflow = {version = "2.15.0" }
tensorflow-macos = { version = "2.15.0", platform = "darwin" }
tensorflow-cpu = [
    { version = "2.15.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "2.15.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
]
tensorflow-cpu-aws = { version = "2.15.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
# https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L107-L108
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" }
]
tensorflow-datasets = "^4.9.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
bump2version = "^1.0.1"
prospector = "^1.8.4"
pyroma = ">=2.4"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"

mkdocs = ">=1.1.2,<2.0.0"
mkdocs-material = ">=8.2.7,<9.0.0"
mkdocstrings = ">=0.18.1"
mdx-include = ">=1.4.1,<2.0.0"
mkdocs-markdownextradata-plugin = ">=0.1.7,<0.3.0"
jinja2 = "3.0.3"
black = "^24.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
