[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiproteomics"
version = "0.3.0"
description = "A package for MSMS spectral library prediction models from the field of (phospho-)proteomics, intended to facilitate the testing and comparison of different neural network architectures and existing models."
authors = [
    {name = "Robin Richardson", email = "r.richardson@esciencecenter.nl"},
    {name = "Dani Bodor", email = "d.bodor@esciencecenter.nl"},
    {name = "Djura Smits", email = "d.smits@esciencecenter.nl"},
    {name = "Thang Pham"},
    {name = "Jaro Camphuijsen"},
    {name = "Candace Makeda Moore"},
]
license = {text = "Apache Software License"}
readme = "README.md"
requires-python = ">=3.10.0,<3.11"

dependencies = [
    "tensorflow ==2.15.0",
    "tf2onnx ==1.16.1",
    "tensorflow-datasets ==4.9.4",
    "pandas==2.2.3",
    "dask[dataframe]==2024.10.0",
    "chardet ==5.1.0",
    "pyteomics ==4.7.5",
    "pydot ==1.4.2",
    "graphviz ==0.20.1",
    "lxml ==4.9.2",
    "seaborn ==0.12.2",
    "wandb == 0.17.9"

]

[tool.setuptools]
py-modules = ["aiproteomics"]

[project.optional-dependencies]
dev = [
    "pytest ==7.2.1",
    "pytest-cov ==4.0.0",
    "bump2version ==1.0.1",
    "prospector ==1.8.4",
    "pyroma ==2.5",
    "jupyter ==1.0.0",
    "jupyterlab ==3.6.1"
]
docs = [
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=8.2.7,<9.0.0",
    "mkdocstrings >=0.18.1",
    "mdx-include >=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin >=0.1.7,<0.3.0",
    "jinja2 == 3.0.3",
    "black == 24.1.1"
]
